<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.authentication.LoginActivity">

    <include
        android:id="@+id/include2"
        layout="@layout/back_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/loginScreen_footerSectionLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- EMAIL -->
            <EditText
                android:id="@+id/loginScreen_emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edit"
                android:hint="@string/emailTextViewHint"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

            <!-- PASSWORD -->
            <EditText
                android:id="@+id/loginScreen_passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edit"
                android:hint="@string/passwordTextViewHint"
                android:inputType="textPassword"
                android:padding="10dp" />

            <TextView
                android:id="@+id/loginScreen_forgotTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/loginScreen_forgotAccountText"
                android:textAlignment="textEnd"
                android:textColor="@color/house_per_season_light_blue" />

            <android.widget.Button
                android:id="@+id/loginScreen_loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_btn"
                android:text="@string/loginScreen_buttonText"
                android:textAllCaps="true"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>

    <!-- Footer  -->
    <LinearLayout
        android:id="@+id/loginScreen_footerSectionLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginScreen_AlreadyHaveNotAccountPartOne"
            android:textAlignment="textEnd"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/loginScreen_createAccountButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginScreen_AlreadyHaveNotAccountPartTwo"
            android:textAlignment="textEnd"
            android:textColor="@color/house_per_season_blue"
            android:textStyle="bold"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>